--- a/vignettes/indexical_vignette.Rmd
+++ b/vignettes/indexical_vignette.Rmd
@@ -7,6 +7,8 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+**Indexical** is a package designed to help format and analyze biological census data.
+
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -17,3 +19,16 @@ knitr::opts_chunk$set(
 ```{r setup}
 library(indexical)
 ```
+
++++walk through census() with bundled data set
+
+```{r}
+
+```
+
++++walk through div_index() with bundled data set
+
+```{r}
+
+```
+
